--- a/src/_card.scss
+++ b/src/_card.scss
@@ -13,7 +13,7 @@
   border-radius: 11px;
   background-color: white;
 
-  background-image: url("../images/bg-pattern-card.svg");
+  background-image: url("images/bg-pattern-card.svg");
   background-position: top 35%;
   background-repeat: repeat-x;
 
