--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -1,7 +1,7 @@
 @import "variables";
 body {
   background-color: $Dark-Cyan;
-  background-image: url("../images/bg-pattern-top.svg"), url("../images/bg-pattern-bottom.svg");
+  background-image: url("images/bg-pattern-top.svg"), url("images/bg-pattern-bottom.svg");
   background-repeat: no-repeat, no-repeat;
   background-position: -55% 45%, 120% -45%;
 
